Day Two Updates

--- a/iRock/index.html
+++ b/iRock/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>iRock - The Virtual Pet Rock</title>
 		
-		<script typle="text/javascript">
+		<script type="text/javascript">
 			function touchRock() {
 				var userName = prompt("What is your name?", "Enter your name here.");
 				
