--- a/iRock-2/index.html
+++ b/iRock-2/index.html
@@ -2,24 +2,41 @@
 	<head>
 		<title>iRock - The Virtual Pet Rock</title>
 		
+		<script type="text/javascript" src="cookie.js"></script>
+		
 		<script type="text/javascript">
+			var userName;
 						
 			function resizeRock() {
 				document.getElementById("rockImg").style.height = (document.body.clientHeight - 100) * 0.9;
 			}
 			
 			function greetUser() {
-				alert('Hello, I am your pet rock.');
+				if (navigator.cookieEnabled)
+					userName = readCookie("irock_username");
+				if (userName)
+					alert ("Hello " + userName + ", I missed you.");
+				else
+					alert('Hello, I am your pet rock.');
 			}
 			
 			function touchRock() {
-				var userName = prompt("What is your name?", "Enter your name here.");
-				
-				if (userName) {
-					alert("It is good to meet you, " + userName + ".");
-					document.getElementById("rockImg").src = "images/rock_happy.png";
-				}
-			}
+		        if (userName) {
+		          alert("I like the attention, " + userName + ". Thank you.");
+		        }
+		        else {
+		          userName = prompt("What is your name?", "Enter your name here.");
+		          if (userName) {
+		            alert("It is good to meet you, " + userName + ".");
+		            if (navigator.cookieEnabled)
+		            	writeCookie("irock_username", userName, 5 * 365);
+		            else
+		            	alert("Sorry, cookies aren't supported/enabled in your browser. I won't remember you later.")
+		          }
+		        }
+		        document.getElementById("rockImg").src = "rock_happy.png";
+		        setTimeout("document.getElementById('rockImg').src = 'rock.png';", 5 * 60 * 1000);
+		      }
 		</script>
 		
 	</head>
